Fix image visibilty in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ main img {
     position:absolute;
     width: 100%;
     height: 100%;
-    background-image: url("assets/images/beachpicture.jpg");
+    background-image: url("/assets/images/beachpicture.jpg");
     background-size: cover;
     border-radius: 10px;
     z-index: -1;
